@@ -10,6 +10,7 @@ Bug reports and fixes from:
    Greg Badros
  Rodney Brown
     Ian Grant
+   Dirk Herrmann
  Anders Holst
  Karoly Lorentey
 Han-Wen Nienhuys
